terraform/modules/network/security_group/main.tf
# Zookeeper-specific security group
resource "aws_security_group" "zookeeper" {
  name        = "zookeeper_security_group"
  description = "Allow zookeeper traffic"
  vpc_id = "${var.vpc_id}"

  ingress {
    from_port   = 2181
    to_port     = 2181
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 31995
    to_port     = 31995
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    cidr_blocks     = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }

  tags {
    Name = "zookeeper_security_group"
  }
}
